# testMacPy

./: .gitignore  Brewfile  CMakeLists.txt
.github/workflows/: Main.yml
libs/pymod/: CMakeLists.txt
libs/pymod/lib/mod/: __init__.py
libs/pymod/redirector/: setup.cfg.in
libs/pymod/redirector/mod/: __init__.py.in
test/: CMakeLists.txt
